added jwt type aspect

--- a/src/main/resources/db/changelog/1.0.0/changelog.yml
+++ b/src/main/resources/db/changelog/1.0.0/changelog.yml
@@ -19,7 +19,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: PASSWORD
-                  type: varchar(255)
+                  type: bytea
                   constraints:
                     nullable: false
               - column:
