--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
     <name>lsm-user</name>
     <description>User web service for LeaseMate</description>
 
+    <build>
+        <finalName>lsm-user</finalName>
+    </build>
+
     <repositories>
         <repository>
             <id>github</id>
@@ -35,10 +39,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
