--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <repository>
             <id>github</id>
             <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Lease-Mate/lsm-user</url>
+            <url>https://maven.pkg.github.com/Lease-Mate</url>
         </repository>
     </distributionManagement>
 
