--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/Lease-Mate/lsm-user</url>
+            <url>https://maven.pkg.github.com/Lease-Mate</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
