--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
   web:
     resources:
       add-mappings: false
+    locale: en_EN
+    locale-resolver: fixed
   datasource:
     username: lsm_user
   liquibase:
@@ -27,8 +29,8 @@ management:
       enabled: true
 
 jwt:
-  token-expiration: 10m
-  refresh-token-expiration: 20m
+  token-expiration: 20m
+  refresh-token-expiration: 1h
 
 cache:
   stores:
